force-app/main/default/objects/Account_Link__c/Account_Link__c.object-meta.xml
<CustomObject>
    <label>Account Link</label>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Account Link #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>