force-app/main/default/objects/Account_Link__c/fields/Account_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Id__c</fullName>
    <formula>Account__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type Id</label>
    <type>Text</type>
</CustomField>