force-app/main/default/objects/Account_Link__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <externalId>true</externalId>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>