force-app/main/default/objects/Account_Link__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <externalId>true</externalId>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>