force-app/main/default/objects/Account_Link__c/validationRules/Disallowed_Domains.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallowed_Domains</fullName>
    <active>true</active>
    <description
  >To prevent generic email domains from being created.</description>
    <errorConditionFormula>CASE(Email_Domain__c,
&quot;gmail.com&quot;,1,
&quot;yahoo.com&quot;,1,
&quot;hotmail.com&quot;,1,
&quot;aol.com&quot;,1,
&quot;comcast.net&quot;,1,
&quot;sbcglobal.net&quot;,1,
&quot;bellsouth.net&quot;,1,
&quot;msn.com&quot;,1,
&quot;verizon.net&quot;,1,
&quot;att.net&quot;,1,
&quot;outlook.com&quot;,1,
&quot;windstream.net&quot;,1,
&quot;live.com&quot;,1,
&quot;frontier.com&quot;,1,
&quot;me.com&quot;,1,
&quot;cox.net&quot;,1,
&quot;centurytel.net&quot;,1,
&quot;charter.net&quot;,1,
&quot;icloud.com&quot;,1,
&quot;earthlink.net&quot;,1,
&quot;mac.com&quot;,1,
&quot;embarqmail.com&quot;,1,
&quot;roadrunner.com&quot;,1,
&quot;optonline.net&quot;,1,
&quot;ymail.com&quot;,1,
&quot;tds.net&quot;,1,
&quot;mchsi.com&quot;,1,
&quot;ptd.net&quot;,1,
&quot;zoominternet.net&quot;,1,
&quot;juno.com&quot;,1,
&quot;suddenlinkmail.com&quot;,1,
&quot;centurylink.net&quot;,1,
&quot;rocketmail.com&quot;,1,
&quot;mindspring.com&quot;,1,
&quot;swbell.net&quot;,1,
&quot;netscape.net&quot;,1,
&quot;ameritech.net&quot;,1,
&quot;prodigy.net&quot;,1,
&quot;suddenlink.net&quot;,1,
&quot;mail.com&quot;,1,
&quot;consolidated.net&quot;,1,
&quot;q.com&quot;,1,
&quot;snet.net&quot;,1,
&quot;aim.com&quot;,1,
&quot;pacbell.net&quot;,1,
&quot;cs.com&quot;,1,
&quot;qwestoffice.net&quot;,1,
&quot;rcn.com&quot;,1,
&quot;atlanticbb.net&quot;,1,
&quot;usa.net&quot;,1,
&quot;fuse.net&quot;,1,
&quot;hughes.net&quot;,1,
&quot;netzero.net&quot;,1,
&quot;email.com&quot;,1,
&quot;netzero.com&quot;,1,
&quot;protonmail.com&quot;,1,
&quot;gmx.com&quot;,1,
&quot;wowway.com&quot;,1,
&quot;bresnan.net&quot;,1,
&quot;wildblue.net&quot;,1,
&quot;chartermi.net&quot;,1,
&quot;erols.com&quot;,1,
&quot;flash.net&quot;,1,
&quot;ix.netcom.com&quot;,1,
&quot;peoplepc.com&quot;,1,
&quot;surewest.net&quot;,1,
&quot;gmai.com&quot;,1,
&quot;mailinator.com&quot;,1,
&quot;optimum.net&quot;,1,
&quot;gate.net&quot;,1,
&quot;gmial.com&quot;,1,
&quot;126.com&quot;,1,
&quot;iname.com&quot;,1,
&quot;sti.net&quot;,1,
&quot;earthlink.com&quot;,1,
&quot;gmx.net&quot;,1,
&quot;pobox.com&quot;,1,
&quot;163.COM&quot;,1,
&quot;airmail.net&quot;,1,
&quot;attglobal.net&quot;,1,
&quot;btinternet.com&quot;,1,
&quot;comast.net&quot;,1,
&quot;consultant.com&quot;,1,
&quot;email.msn.com&quot;,1,
&quot;enter.net&quot;,1,
&quot;googlemail.com&quot;,1,
&quot;igc.org&quot;,1,
&quot;inbox.com&quot;,1,
&quot;nym.hush.com&quot;,1,
&quot;opayq.com&quot;,1,
&quot;pdt.net&quot;,1,
&quot;qq.com&quot;,1,
&quot;qwest.net&quot;,1,
&quot;sprint.blackberry.net&quot;,1,
&quot;starpower.net&quot;,1,
&quot;telus.net&quot;,1,
&quot;test.com&quot;,1,
&quot;zoho.com&quot;,1,
&quot;cableone.net&quot;,1,
0)
= 1</errorConditionFormula>
    <errorMessage>Generic email domains are not allowed.</errorMessage>
</ValidationRule>