force-app/main/default/objects/Account_Link__c/validationRules/No_Vendor_Account_Links.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Vendor_Account_Links</fullName>
    <active>true</active>
    <description
  >To disallow Account Link records for Vendor Account.</description>
    <errorConditionFormula
  >Account__r.RecordTypeId = &quot;01230000000uiTr&quot; /*Vendor*/</errorConditionFormula>
    <errorMessage>Cannot enter Account Links for Vendor accounts.</errorMessage>
</ValidationRule>